Add user create endpoint

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "express-typescript-example",
-  "version": "1.0.0",
-  "description": "Rest API using Node.js, TypeScript, Express",
+  "name": "snaptime",
+  "version": "0.0.1",
+  "description": "Snaptime Backend",
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "node ./build/server.js",
+    "dev": "nodemon -L",
     "start": "tsc && npm run dev"
   },
   "keywords": [
@@ -30,6 +30,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "5.18.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
