--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "snaptime",
+  "name": "snaptime-backend",
   "version": "0.0.1",
   "description": "Snaptime Backend",
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon -L",
-    "start": "tsc && npm run dev"
+    "dev": "dotenvx run -- nodemon -L",
+    "start": "tsc && dotenvx run -- npm run dev"
   },
   "keywords": [
     "express",
@@ -19,12 +19,13 @@
     "nodejs",
     "crud"
   ],
-  "author": "bezkoder",
   "license": "ISC",
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.7.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^22.4.0",
+    "nodemon": "^3.1.4",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
