--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "5.18.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "openai": "^4.0.0"
   }
 }
