--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+DATABASE_PROVIDER="sqlite"
 DATABASE_URL="file:./dev.db"
+
 OPENAI_API_KEY="insert_openai_api_key_here"
 OPENAI_MODEL_NAME="gpt-4o-mini"
+
 PORT=8080
