--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@dotenvx/dotenvx": "^1.7.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "@types/node": "^22.4.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.18.0",
@@ -32,9 +33,11 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.633.0",
     "@prisma/client": "5.18.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "openai": "^4.0.0"
   }
