Change docker compose to build current context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   snaptime-backend:
     container_name: snaptime_backend
-    image: ghcr.io/snaptime-app/backend
+    # image: ghcr.io/snaptime-app/backend
+    build: .
     volumes:
       - uploads:/app/uploads:rw
     ports:
