--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "5.18.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "openai": "^4.0.0"
