--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ OPENAI_API_KEY="insert_openai_api_key_here"
 OPENAI_MODEL_NAME="gpt-4o-mini"
 
 PORT=8080
+
+ALLOWED_ORIGINS="https://api.snaptime.jimmyliu.dev,https://snaptime.jimmyliu.dev"
